--- a/main.yml
+++ b/main.yml
@@ -9,20 +9,17 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [14.x]
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
-    - name: Install Packages
+        node-version: 14
+    - name: Install dependencies
       run: yarn install
     - name: Build project
       run: yarn build
-    - name: Upload production-ready build files
+    - name: Upload build artifacts
       uses: actions/upload-artifact@v3
       with:
         name: production-files
@@ -32,9 +29,8 @@ jobs:
     name: Deploy
     needs: build
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
     steps:
-    - name: Download artifact
+    - name: Download build artifacts
       uses: actions/download-artifact@v3
       with:
         name: production-files
